Positioning issue on mobile, resolved. Carousel was too far left, and I disliked the size of 'Welcome...' vs the Paragraph beneath it.

--- a/app/styles/_body.scss
+++ b/app/styles/_body.scss
@@ -17,11 +17,16 @@
 
 	.welcome {
 		.welcome-img{
-			width: 75%;
+			width: 87%;
+
+			@media (min-width: $med-scr) {
+				width: 75%;
+			}
 		}
 
 		.welcome-info {
-			width: 100%;
+			width: 80%;
+			padding-left: 10%;
 			word-wrap: break-word;
 			@media (min-width: $med-scr) {
 				width: 70%;
